--- a/src/components/MainContainer/MainContainer.scss
+++ b/src/components/MainContainer/MainContainer.scss
@@ -3,7 +3,7 @@
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 70vh;
     overflow: hidden;
 }
 
@@ -19,7 +19,7 @@
     transform: translateX(-50%);
     border-radius: 50%;
     background: #FFAB08;
-    @include circle-size-and-position(150%, 150%, 25%);
+    @include circle-size-and-position(150%, 150%, 20%);
 }
 
 .main-container {
@@ -29,10 +29,11 @@
     height: 85%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     gap: 30px;
     position: relative;
     z-index: 1000;
+    padding-top: 35px;
 }
 h1 {
     display: flex;
@@ -53,6 +54,9 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 65px;
+    padding-top: 50px;
+    align-self: stretch;
+    justify-content: start;
 }
 .main-delivery-text {
     font-size: 16px;
@@ -75,17 +79,20 @@ h1 {
     .main-delivery-content {
         gap: 35px;
     }
-    h1 span {
-        font-size: 35px;
+    h1 {
+        margin-top: 50px;
+        span {
+            font-size: 35px; 
+        }
     }
     .main-elipse {
-        @include circle-size-and-position(2540px, 2540px, 250px);
+        @include circle-size-and-position(2540px, 2540px, 25%);
     }
 }
 @media (max-width: 710px) {
     .main-container {
         flex-direction: column-reverse;
-        padding-top: 100px;
+        align-items: center;
     }
     .main-delivery-content {
         display: flex;
@@ -97,26 +104,47 @@ h1 {
         text-align: center;
     }
     .main-elipse {
-        @include circle-size-and-position(1500px, 1500px, 150px);
+        @include circle-size-and-position(1500px, 1500px, 5%);
     }
 }
 
 @media (max-width: 430px) {
     .main-elipse {
-        @include circle-size-and-position(900px, 1200px, 15%);
+        @include circle-size-and-position(900px, 1200px, 10%);
     }
-    .main-container {
-        padding-top: 85px;
-        justify-content: start;
-        padding-top: 130px;
-    }
-    h1 span {
-        font-size: 25px;
+    h1 {
+        margin-top: 15%;
+        span {
+            font-size: 25px;
+        }
     }
     .main-delivery-content {
         gap: 25px;
     }
     .main-delivery-text {
         font-size: 12px;
+    }
+    .main-container {
+        padding-top: 0;
+        justify-content: start;
+    }
+}
+
+
+@media (max-height: 750px) {
+    .main-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            transform: scale(.65);
+            position: relative;
+            bottom: 15px;
+        }
+    }
+    .main-delivery-content {
+        gap: 30px;
+        position: relative;
+        top: 30px;
     }
 }
