--- a/src/components/MainSection/OrderList/OrderList.scss
+++ b/src/components/MainSection/OrderList/OrderList.scss
@@ -117,6 +117,22 @@
     background: white;
 }
 
+.main-food-list-total-price-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 15px;
+}
+.main-food-list-total-price-title {
+    font-weight: 100;
+}
+.main-food-list-delivery-block {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    padding-top: 15px;
+}
+
 @mixin order-list-styles () {
     .main-food-basket-list {
         position: absolute;
