--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: 100;
+    color: black !important;
 }
 * {
     padding: 0;
