--- a/src/components/DeliveryMenu/DeliveryMenu.scss
+++ b/src/components/DeliveryMenu/DeliveryMenu.scss
@@ -25,21 +25,21 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    transition-duration: .5s;
+    transition-duration: .5s !important;
 
     input {
         color: black !important;
     }
 
     &.__opened {
-        transform: translateY(-100%);
+        transform: translateY(0);
         opacity: 1;
-        pointer-events: none;
+        pointer-events: all;
     }
     &.__closed {
-        transform: translateY(0);
+        transform: translateY(-100%);
         opacity: 0;
-        pointer-events: all;
+        pointer-events: none;
     }
 }
 .delivery-menu-body {
@@ -52,7 +52,7 @@
 }
 .delivery-menu-image-block {
     background: #FFAB08;
-    flex: 1;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,7 +60,7 @@
 }
 .delivery-menu-form-block {
     padding: 25px;
-    flex: 1;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -168,5 +168,8 @@
 @media (max-width: 530px) {
     .delivery-menu-image-block {
         display: none;
+    }
+    .delivery-menu-form-block {
+        width: 100%;
     }
 }
